src/test/deca/context/valid/ContextSansObjet/Condition/ElseVide.deca
//Description:
//  corps else sans instruction
//
//Résultat:
// ok
{
if(false)
{
    print("bizarre!!");
}
else {
}
}
