src/test/deca/context/invalid/provided/ContextSansObjet/condNonBooleenne.deca
//Description:
//  condition non booléenne
//
//Résultat:
// Erreur Contextuelle
//  ligne 9 :
{
int a=2;
if(a)
{
  print("bizarre!!");
}
}
